[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Luca Marchetti" }]
name = "errors"
description = "A small Python project for propagating uncertainties fast."
version = "0.1.0"
requires-python = ">=3.8"
readme = "README.MD"
license = "MIT"
dependencies = ["matplotlib", "scipy", "numpy"]

[tool.setuptools.packages.find]
where = ["src"]

# [tool.setuptools.package-data]
# plotter = ["data/*", "data/info/*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 119

[project.urls]
Repository = "https://github.com/lmarchetti02/errors"
